# kionix-drivers

./: CMakeLists.txt  Kconfig  README.md  readme-2022-nov.rst
drivers/: Kconfig
drivers/kionix/: Kconfig
drivers/kionix/kx132-1211/: CMakeLists.txt  Kconfig  README-KX132-driver-roadmap.rst  home.sh  kx132-1211.c  kx132-1211.h  kx132-bus-iface.h  kx132-i2c.c  kx132-registers.c  kx132-registers.h  kx132-spi.c  kx132-triggers.c  kx132-triggers.h  whats-missing-to-gcc.txt
dts/bindings/: kionix,kx132-1211.yml  kionix,kx132-spi.yml
include/: driver-work-v2.h
notes-dev-only/: README-dev-notes.txt  gcc-dash-E-2.sh
